[build-system]
requires = ["setuptools", "setuptools-grpc"]
build-backend = "setuptools.build_meta"

[project]
name = "chakra"
requires-python = ">=3.7"
version = "0.0.4"
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [
    {name = "MLCommons", email = "chakra@mlcommons.org"},
]
dependencies = ["protobuf==4.*", "graphviz", "networkx", "pydot"]

[project.urls]
Homepage = "https://github.com/mlcommons/chakra"
Documentation = "https://github.com/mlcommons/chakra/README.md"
Repository = "https://github.com/mlcommons/chakra.git"

[tool.setuptools.package-dir]
"chakra.et_def" = "et_def"
"chakra.et_converter" = "et_converter"
"chakra.et_visualizer" = "et_visualizer"
"chakra.timeline_visualizer" = "timeline_visualizer"
"chakra.et_generator" = "utils/et_generator"
"chakra.et_jsonizer" = "utils/et_jsonizer"
"chakra.third_party.utils" = "third_party/utils"

[tool.setuptools.package-data]
"chakra.et_def" = ["et_def_pb2.pyi", "et_def.proto"]

[project.scripts]
chakra_converter = "chakra.et_converter.et_converter:main"
chakra_visualizer = "chakra.et_visualizer.et_visualizer:main"
chakra_timeline_visualizer = "chakra.et_timeline_visualizer.et_timeline_visualizer:main"
chakra_generator = "chakra.et_generator.et_generator:main"
chakra_jsonizer = "chakra.et_jsonizer.et_jsonizer:main"

[tool.ruff]
target-version = "py39"
line-length = 120
exclude = [
    "trace_link.py",
    "test_trace_link.py",
]

[tool.ruff.lint]
select = ["I", "B", "E", "F", "SIM", "W", "C90", "EXE"]

[tool.ruff.format]
indent-style = "space"
